# agneticRAG

./: .gitignore  README.md  ingestion.py  main.py  pyproject.toml
graph/: const.py  graph.py  state.py
graph/nodes/: retrieve.py
